--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner-wrap">
         <div class="top">
           <p>
-            <i>October November </i>is an interdisciplinary practice focused on crafting digital wares for small businesses and creators, helping to foster <i>productivity</i> and <i>creativity</i>.
+            <i>October November</i> is an interdisciplinary practice focused on crafting digital wares for <i>small businesses</i> and <i>creators</i>.
           </p>
           <a href="https://creativemarket.com/OctoberNovember" target="_blank">shop on creative market</a>
         </div>
