--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="inner-wrap">
         <div class="top">
           <p>
-            <i>October November</i> is an interdisciplinary practice focused on crafting digital wares for <i>small businesses</i> and <i>creators</i>.
+            <i>October November </i>is an interdisciplinary practice focused on crafting digital wares for <i>small businesses</i> and <i>creators</i>.
           </p>
-          <a href="https://creativemarket.com/OctoberNovember" target="_blank">shop on creative market</a>
+          <a href="https://creativemarket.com/OctoberNovember" target="_blank">visit the shop</a>
         </div>
         <div class="bottom">
           <div class="left">
@@ -36,14 +36,17 @@
                 <div id="mc_embed_signup_scroll">
               
             <div class="mc-field-group">
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email...">
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email...">
+              <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" >
+                join
+              </button>
             </div>
               <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
               </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ab6147dc9ab250338e131f913_f5f2573c45" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="visibility: hidden;"></div>
+                <div class="clear"></div>
                 </div>
             </form>
             </div>
