--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
       </div>
     </section>
   </body>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120209187-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-120209187-1');
+  </script>
+
   <script src="public/jquery-1.11.3.min.js"></script>
   <script src="public/jquery-ui.js"></script>
   <script src="public/main.js"></script>
